# bitcomposer

./: .gitignore  LICENSE  README.md  pyproject.toml
bitcomposer/: __init__.py  bass.py  cli.py  composer.py  harmony.py  it_format.py  melody.py  pattern.py  samples.py  structure.py  theory.py
